Signed-off-by: akky2000 <144481400+akky2000@users.noreply.github.com>

--- a/docu-sense/Backend/.env
+++ b/docu-sense/Backend/.env
@@ -1,10 +1,10 @@
 MONGO_URI =mongodb://localhost:27017
 MONGO_URI="mongodb://localhost:27017"
+#replace with your mongo_uri
 
 
 
-
-
+#replace with your keys
 CLOUDINARY_CLOUD_NAME=di5tlskcg
 CLOUDINARY_API_KEY=568814293129817
 CLOUDINARY_API_SECRET=3eLJh5aB7ktE5hUv7XKxBplaptQ
